--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,6 +4,7 @@ env:
   SERVICE_NAME: custom-fastapi-service
   PROJECT_ID: project-962d6846-0b6b-4745-b07
   REGION: us-east1
+  REPO_NAME: custom-fastapi
   DOCKER_IMAGE_URL: us-central1-docker.pkg.dev/project-962d6846-0b6b-4745-b07/custom-fastapi/custom-fastapi
 
 on:
@@ -17,31 +18,63 @@ on:
 jobs:
   dockerize-and-deploy:
     runs-on: ubuntu-latest
-    if: ${{ secrets.GCP_SA_KEY != '' }}  # Skip workflow if secret is missing (fork safety)
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2. Fail early if secret is missing (fork safety)
+      - name: Check GCP_SA_KEY secret
+        run: |
+          if [ -z "${GCP_SA_KEY}" ]; then
+            echo "GCP_SA_KEY secret not set. Skipping workflow."
+            exit 1
+          fi
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+
+      # 3. Authenticate with GCP
       - name: Google Cloud Auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ env.PROJECT_ID }}
 
+      # 4. Install gcloud CLI
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.PROJECT_ID }}
 
+      # 5. Configure Docker to use Artifact Registry
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
+      # 6. Ensure Artifact Registry repository exists
+      - name: Create Artifact Registry repository if missing
+        run: |
+          if ! gcloud artifacts repositories list --location=us-central1 --project=${PROJECT_ID} | grep -q "^${REPO_NAME} "; then
+            echo "Creating Artifact Registry repository '${REPO_NAME}'..."
+            gcloud artifacts repositories create ${REPO_NAME} \
+              --repository-format=docker \
+              --location=us-central1 \
+              --description="Docker repository for FastAPI images" \
+              --project=${PROJECT_ID}
+          else
+            echo "Artifact Registry repository '${REPO_NAME}' already exists."
+          fi
+        env:
+          PROJECT_ID: ${{ env.PROJECT_ID }}
+          REPO_NAME: ${{ env.REPO_NAME }}
+
+      # 7. Build and push Docker image
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_IMAGE_URL }}:latest -f Dockerfile.prod .
+          docker build --progress=plain -t ${{ env.DOCKER_IMAGE_URL }}:latest -f Dockerfile.prod .
           docker push ${{ env.DOCKER_IMAGE_URL }}:latest
 
+      # 8. Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${{ env.SERVICE_NAME }} \
